// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`align bottom 1`] = `
.emotion-1 {
  height: 200px;
}

.emotion-2 {
  background: #40a0FF;
}

.emotion-3 {
  background: #FF4FaF;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-align bottom23456"
  >
    <div
      id="align bottom23456"
    >
      <div
        class="ant-row ant-row-bottom emotion-1"
        id="align bottom-content23456"
      >
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-10"
          id="bl-One23456"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-3 ant-col-xs-24 ant-col-sm-24 ant-col-md-10"
          id="bl-Two23456"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`align bottom wrap behavior 1`] = `
.emotion-1 {
  height: 200px;
}

.emotion-2 {
  background: #40a0FF;
}

.emotion-3 {
  background: #FF4FaF;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-align bottom wrap behavior23456"
  >
    <div
      id="align bottom wrap behavior23456"
    >
      <div
        class="ant-row ant-row-bottom emotion-1"
        id="align bottom wrap behavior-content23456"
      >
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
          id="bl-One23456"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-3 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
          id="bl-Two23456"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`align middle 1`] = `
.emotion-1 {
  height: 200px;
}

.emotion-2 {
  background: #40a0FF;
}

.emotion-3 {
  background: #FF4FaF;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-align middle23456"
  >
    <div
      id="align middle23456"
    >
      <div
        class="ant-row ant-row-middle emotion-1"
        id="align middle-content23456"
      >
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-10"
          id="bl-One23456"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-3 ant-col-xs-24 ant-col-sm-24 ant-col-md-10"
          id="bl-Two23456"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`align middle wrap behavior 1`] = `
.emotion-1 {
  height: 200px;
}

.emotion-2 {
  background: #40a0FF;
}

.emotion-3 {
  background: #FF4FaF;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-align middle wrap behavior23456"
  >
    <div
      id="align middle wrap behavior23456"
    >
      <div
        class="ant-row ant-row-middle emotion-1"
        id="align middle wrap behavior-content23456"
      >
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
          id="bl-One23456"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-3 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
          id="bl-Two23456"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`align top 1`] = `
.emotion-1 {
  height: 200px;
}

.emotion-2 {
  background: #40a0FF;
}

.emotion-3 {
  background: #FF4FaF;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-align top23456"
  >
    <div
      id="align top23456"
    >
      <div
        class="ant-row ant-row-top emotion-1"
        id="align top-content23456"
      >
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-10"
          id="bl-One23456"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-3 ant-col-xs-24 ant-col-sm-24 ant-col-md-10"
          id="bl-Two23456"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`align top wrap behavior 1`] = `
.emotion-1 {
  height: 200px;
}

.emotion-2 {
  background: #40a0FF;
}

.emotion-3 {
  background: #FF4FaF;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-align top wrap behavior23456"
  >
    <div
      id="align top wrap behavior23456"
    >
      <div
        class="ant-row ant-row-top emotion-1"
        id="align top wrap behavior-content23456"
      >
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
          id="bl-One23456"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-3 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
          id="bl-Two23456"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`direction column 1`] = `
.emotion-2 {
  background: #40a0FF;
}

.emotion-3 {
  background: #FF4FaF;
}

.emotion-4 {
  background: #40AA55;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-direction column23456"
  >
    <div
      id="direction column23456"
    >
      <div
        class="ant-row emotion-1"
        id="direction column-content23456"
        style="flex-direction: column;"
      >
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-8"
          id="bl-One23456"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-3 ant-col-xs-24 ant-col-sm-24 ant-col-md-8"
          id="bl-Two23456"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-4 ant-col-xs-24 ant-col-sm-24 ant-col-md-8"
          id="bl-Three23456"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`direction column-reverse 1`] = `
.emotion-2 {
  background: #40a0FF;
}

.emotion-3 {
  background: #FF4FaF;
}

.emotion-4 {
  background: #40AA55;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-direction column-reverse23456"
  >
    <div
      id="direction column-reverse23456"
    >
      <div
        class="ant-row emotion-1"
        id="direction column-reverse-content23456"
        style="flex-direction: column-reverse;"
      >
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-8"
          id="bl-One23456"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-3 ant-col-xs-24 ant-col-sm-24 ant-col-md-8"
          id="bl-Two23456"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-4 ant-col-xs-24 ant-col-sm-24 ant-col-md-8"
          id="bl-Three23456"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`direction row 1`] = `
.emotion-2 {
  background: #40a0FF;
}

.emotion-3 {
  background: #FF4FaF;
}

.emotion-4 {
  background: #40AA55;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-direction row23456"
  >
    <div
      id="direction row23456"
    >
      <div
        class="ant-row emotion-1"
        id="direction row-content23456"
        style="flex-direction: row;"
      >
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-4"
          id="bl-One23456"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-3 ant-col-xs-24 ant-col-sm-24 ant-col-md-4"
          id="bl-Two23456"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-4 ant-col-xs-24 ant-col-sm-24 ant-col-md-4"
          id="bl-Three23456"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`direction row-reverse 1`] = `
.emotion-2 {
  background: #40a0FF;
}

.emotion-3 {
  background: #FF4FaF;
}

.emotion-4 {
  background: #40AA55;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-direction row-reverse23456"
  >
    <div
      id="direction row-reverse23456"
    >
      <div
        class="ant-row emotion-1"
        id="direction row-reverse-content23456"
        style="flex-direction: row-reverse;"
      >
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-4"
          id="bl-One23456"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-3 ant-col-xs-24 ant-col-sm-24 ant-col-md-4"
          id="bl-Two23456"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-4 ant-col-xs-24 ant-col-sm-24 ant-col-md-4"
          id="bl-Three23456"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`gutter as integer 1`] = `
.emotion-2>* {
  background: #40a0FF;
}

.emotion-3>* {
  background: #FF4FaF;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-gutter as integer23456"
  >
    <div
      id="gutter as integer23456"
    >
      <div
        class="ant-row emotion-1"
        id="gutter as integer-content23456"
        style="margin: -15px -15px -15px -15px;"
      >
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
          id="bl-One23456"
          style="padding: 15px 15px 15px 15px;"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-3 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
          id="bl-Two23456"
          style="padding: 15px 15px 15px 15px;"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-3 ant-col-xs-24 ant-col-sm-24 ant-col-md-10"
          id="bl-Three23456"
          style="padding: 15px 15px 15px 15px;"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-10"
          id="bl-Four23456"
          style="padding: 15px 15px 15px 15px;"
        >
          <div
            id="Four23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`gutter for col and row 1`] = `
.emotion-2 {
  background: #40a0FF;
}

.emotion-3 {
  background: #FF4FaF;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-gutter for col and row23456"
  >
    <div
      id="gutter for col and row23456"
    >
      <div
        class="ant-row emotion-1"
        id="gutter for col and row-content23456"
        style="margin: -10px -25px -10px -25px;"
      >
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
          id="bl-One23456"
          style="padding: 10px 25px 10px 25px;"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-3 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
          id="bl-Two23456"
          style="padding: 10px 25px 10px 25px;"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-3 ant-col-xs-24 ant-col-sm-24 ant-col-md-10"
          id="bl-Three23456"
          style="padding: 10px 25px 10px 25px;"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-10"
          id="bl-Four23456"
          style="padding: 10px 25px 10px 25px;"
        >
          <div
            id="Four23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`gutter is object 1`] = `
.emotion-2 {
  background: #40a0FF;
}

.emotion-3 {
  background: #FF4FaF;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-gutter is object23456"
  >
    <div
      id="gutter is object23456"
    >
      <div
        class="ant-row emotion-1"
        id="gutter is object-content23456"
        style="margin: -30px -30px -30px -30px;"
      >
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
          id="bl-One23456"
          style="padding: 30px 30px 30px 30px;"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-3 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
          id="bl-Two23456"
          style="padding: 30px 30px 30px 30px;"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-3 ant-col-xs-24 ant-col-sm-24 ant-col-md-10"
          id="bl-Three23456"
          style="padding: 30px 30px 30px 30px;"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-10"
          id="bl-Four23456"
          style="padding: 30px 30px 30px 30px;"
        >
          <div
            id="Four23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`justify center 1`] = `
.emotion-2 {
  background: #40a0FF;
}

.emotion-3 {
  background: #FF4FaF;
}

.emotion-4 {
  background: #40AA55;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-justify center23456"
  >
    <div
      id="justify center23456"
    >
      <div
        class="ant-row ant-row-center emotion-1"
        id="justify center-content23456"
      >
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-4"
          id="bl-One23456"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-3 ant-col-xs-24 ant-col-sm-24 ant-col-md-4"
          id="bl-Two23456"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-4 ant-col-xs-24 ant-col-sm-24 ant-col-md-4"
          id="bl-Three23456"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`justify end 1`] = `
.emotion-2 {
  background: #40a0FF;
}

.emotion-3 {
  background: #FF4FaF;
}

.emotion-4 {
  background: #40AA55;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-justify end23456"
  >
    <div
      id="justify end23456"
    >
      <div
        class="ant-row ant-row-end emotion-1"
        id="justify end-content23456"
      >
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-4"
          id="bl-One23456"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-3 ant-col-xs-24 ant-col-sm-24 ant-col-md-4"
          id="bl-Two23456"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-4 ant-col-xs-24 ant-col-sm-24 ant-col-md-4"
          id="bl-Three23456"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`justify space-around 1`] = `
.emotion-2 {
  background: #40a0FF;
}

.emotion-3 {
  background: #FF4FaF;
}

.emotion-4 {
  background: #40AA55;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-justify space-around23456"
  >
    <div
      id="justify space-around23456"
    >
      <div
        class="ant-row ant-row-space-around emotion-1"
        id="justify space-around-content23456"
      >
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-4"
          id="bl-One23456"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-3 ant-col-xs-24 ant-col-sm-24 ant-col-md-4"
          id="bl-Two23456"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-4 ant-col-xs-24 ant-col-sm-24 ant-col-md-4"
          id="bl-Three23456"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`justify space-between 1`] = `
.emotion-2 {
  background: #40a0FF;
}

.emotion-3 {
  background: #FF4FaF;
}

.emotion-4 {
  background: #40AA55;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-justify space-between23456"
  >
    <div
      id="justify space-between23456"
    >
      <div
        class="ant-row ant-row-space-between emotion-1"
        id="justify space-between-content23456"
      >
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-4"
          id="bl-One23456"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-3 ant-col-xs-24 ant-col-sm-24 ant-col-md-4"
          id="bl-Two23456"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-4 ant-col-xs-24 ant-col-sm-24 ant-col-md-4"
          id="bl-Three23456"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`justify start 1`] = `
.emotion-2 {
  background: #40a0FF;
}

.emotion-3 {
  background: #FF4FaF;
}

.emotion-4 {
  background: #40AA55;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-justify start23456"
  >
    <div
      id="justify start23456"
    >
      <div
        class="ant-row ant-row-start emotion-1"
        id="justify start-content23456"
      >
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-4"
          id="bl-One23456"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-3 ant-col-xs-24 ant-col-sm-24 ant-col-md-4"
          id="bl-Two23456"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-4 ant-col-xs-24 ant-col-sm-24 ant-col-md-4"
          id="bl-Three23456"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`overflow hidden 1`] = `
.emotion-2 {
  background: #40a0FF;
}

.emotion-3 {
  background: #FF4FaF;
}

.emotion-4 {
  background: #40AA55;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-overflow hidden23456"
  >
    <div
      id="overflow hidden23456"
    >
      <div
        class="ant-row emotion-1"
        id="overflow hidden-content23456"
        style="flex-wrap: nowrap; overflow: hidden;"
      >
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
          id="bl-One23456"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-3 ant-col-xs-24 ant-col-sm-24 ant-col-md-8"
          id="bl-Two23456"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-4 ant-col-xs-24 ant-col-sm-24 ant-col-md-15"
          id="bl-Three23456"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`overflow scroll 1`] = `
.emotion-2 {
  background: #40a0FF;
}

.emotion-3 {
  background: #FF4FaF;
}

.emotion-4 {
  background: #40AA55;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-overflow scroll23456"
  >
    <div
      id="overflow scroll23456"
    >
      <div
        class="ant-row emotion-1"
        id="overflow scroll-content23456"
        style="flex-wrap: nowrap; overflow: scroll;"
      >
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
          id="bl-One23456"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-3 ant-col-xs-24 ant-col-sm-24 ant-col-md-8"
          id="bl-Two23456"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-4 ant-col-xs-24 ant-col-sm-24 ant-col-md-15"
          id="bl-Three23456"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`overflow visible 1`] = `
.emotion-2 {
  background: #40a0FF;
}

.emotion-3 {
  background: #FF4FaF;
}

.emotion-4 {
  background: #40AA55;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-overflow visible23456"
  >
    <div
      id="overflow visible23456"
    >
      <div
        class="ant-row emotion-1"
        id="overflow visible-content23456"
        style="flex-wrap: nowrap; overflow: visible;"
      >
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
          id="bl-One23456"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-3 ant-col-xs-24 ant-col-sm-24 ant-col-md-8"
          id="bl-Two23456"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-4 ant-col-xs-24 ant-col-sm-24 ant-col-md-15"
          id="bl-Three23456"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`wrap nowrap 1`] = `
.emotion-2 {
  background: #40a0FF;
}

.emotion-3 {
  background: #FF4FaF;
}

.emotion-4 {
  background: #40AA55;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-wrap nowrap23456"
  >
    <div
      id="wrap nowrap23456"
    >
      <div
        class="ant-row emotion-1"
        id="wrap nowrap-content23456"
        style="flex-wrap: nowrap;"
      >
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-10"
          id="bl-One23456"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-3 ant-col-xs-24 ant-col-sm-24 ant-col-md-10"
          id="bl-Two23456"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-4 ant-col-xs-24 ant-col-sm-24 ant-col-md-10"
          id="bl-Three23456"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`wrap wrap-reverse 1`] = `
.emotion-2 {
  background: #40a0FF;
}

.emotion-3 {
  background: #FF4FaF;
}

.emotion-4 {
  background: #40AA55;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-wrap wrap-reverse23456"
  >
    <div
      id="wrap wrap-reverse23456"
    >
      <div
        class="ant-row emotion-1"
        id="wrap wrap-reverse-content23456"
        style="flex-wrap: wrap-reverse;"
      >
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
          id="bl-One23456"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-3 ant-col-xs-24 ant-col-sm-24 ant-col-md-8"
          id="bl-Two23456"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col emotion-4 ant-col-xs-24 ant-col-sm-24 ant-col-md-15"
          id="bl-Three23456"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
